Wed May 11 13:35:28 UTC 2011  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * tao/QtResource/QtResource_Loader.h:
        Changed for QT4 deprecated include QT/..

Tue May 10 18:15:28 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/ImR_Client/ImR_Client.cpp:
          changed variable name to not match method argument

        * utils/catior/catior.cpp:
        * utils/nslist/nsadd.cpp:
        * utils/nslist/nsdel.cpp:
        * utils/nslist/nslist.cpp:
          Fixed coverity errors, not leak exceptions

Tue May 10 06:15:43 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * tao/IORManipulation/IORManip_IIOP_Filter.cpp:
          Fixed compile error.

Mon May  9 19:10:54 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_interface.cpp:
        * tao/CSD_ThreadPool/CSD_TP_Task.cpp:
        * tao/IORManipulation/IORManip_IIOP_Filter.cpp:
          Fixed coverity errors

Wed Apr 27 13:35:10 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO.mwc:
          Exclude DAnCE, thanks to Remko Duppen <remko dot duppen at syntel dot nl>
          for reporting this

Tue Apr 26 13:12:03 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_visitor_sequence/cdr_op_ch.cpp:
        * TAO_IDL/be/be_visitor_sequence/cdr_op_cs.cpp:
          Layout changes generated code

Tue Apr 26 13:04:11 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Collocation_Resolver.h:
        * tao/Connect_Strategy.h:
        * tao/Endpoint_Selector_Factory.h:
        * tao/GIOP_Message_Base.h:
        * tao/GIOP_Message_Generator_Parser.h:
        * tao/GIOP_Message_Generator_Parser_10.h:
        * tao/GIOP_Message_Generator_Parser_11.h:
        * tao/GIOP_Message_Generator_Parser_Impl.h:
        * tao/GIOP_Message_State.h:
        * tao/GIOP_Utils.h:
        * tao/GUIResource_Factory.h:
        * tao/LF_Connect_Strategy.h:
        * tao/LF_Follower.cpp:
          Doxygen changes
