@@ -64,7 +64,7 @@ namespace TAO
    * The ORB maintains one table for the whole ORB. ObjectKeys
    * generated by the ORB or the ones seen by the ORB from remote
    * ORB's are stored here. The ObjectKeys are stored through a
-   * wrapper which encapsulates the refcount on them. This class
+   * wrapper which encapsulates the reference count on them. This class
    * actually provides the synchronization mechanism for manipulating
    * the reference counts on the object keys provided by the wrapper
    * class.
