@@ -259,22 +259,22 @@ public:
   int forward_once_exception () const;
 
 private:
-  // Each "endpoint" is of the form:
-  //
-  //   protocol://V.v@addr1,...,W.w@addrN/
-  //
-  // or:
-  //
-  //   protocol://addr1,addr2,...,addrN/
-  //
-  // where "V.v" and "W.w" are optional versions.
-  //
-  // Multiple sets of endpoints may be seperated by a semi-colon `;'.
-  // For example:
-  //
-  //   iiop://space:2001,odyssey:2010;uiop://foo,bar
-  //
-  // All preconnect or endpoint strings should be of the above form(s).
+  /// Each "endpoint" is of the form:
+  ///
+  ///   protocol://V.v@addr1,...,W.w@addrN/
+  ///
+  /// or:
+  ///
+  ///   protocol://addr1,addr2,...,addrN/
+  ///
+  /// where "V.v" and "W.w" are optional versions.
+  ///
+  /// Multiple sets of endpoints may be separated by a semi-colon `;'.
+  /// For example:
+  ///
+  ///   iiop://space:2001,odyssey:2010;uiop://foo,bar
+  ///
+  /// All preconnect or endpoint strings should be of the above form(s).
   int parse_and_add_endpoints (const ACE_CString &endpoints,
                                TAO_EndpointSet &endpoint_set);
 
@@ -312,7 +312,7 @@ private:
   /// 1 if we're using IP_MULTICAST_LOOP and 0 otherwise.
   bool ip_multicastloop_;
 
-  /// Control the strategy for copying vs. appeding octet sequences in
+  /// Control the strategy for copying vs. appending octet sequences in
   /// CDR streams.
   int cdr_memcpy_tradeoff_;
 
